--- a/src/App.css
+++ b/src/App.css
@@ -43,12 +43,17 @@
 .App {
   display: grid;
   grid-template-columns: 800px 150px;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .MapContainer {
-  width: 800px;
-  height: 700px;
-  position: relative;
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 .MapToggles {
@@ -70,8 +75,36 @@
   cursor: pointer;
 }
 
+.SuburbRankingPanel {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 10000;
+  background: #00000082;
+  padding: 20px;
+}
+
 .Rank {
   white-space: nowrap;
   text-align: left;
   cursor: pointer;
+}
+
+.AggregateTogglesContainer {
+  width: 100%;
+  pointer-events: none;
+  position: absolute;
+  bottom: 0;
+  z-index: 10000;
+  display: flex;
+  justify-content: center;
+}
+
+.AggregateToggles {
+  background: #00000082;
+  width: 850px;
+  height: 40px;
+  padding: 40px;
+  pointer-events: all;
 }
