--- a/src/App.css
+++ b/src/App.css
@@ -56,13 +56,14 @@
   position: absolute;
 }
 
-.MapToggles {
+.CategoryToggles {
   position: absolute;
   left: 0;
   top: 200px;
   z-index: 10000;
   background: #00000082;
   user-select: none;
+  padding: 20px;
 }
 
 .Selection {
