--- a/src/App.css
+++ b/src/App.css
@@ -42,13 +42,14 @@
 .Routes {
   position: fixed;
   top: 0;
-  left: 100px;
+  right: 0px;
   z-index: 10000;
-  width: 400px;
+  width: 220px;
   display: flex;
   justify-content: space-between;
   background: #ffffff94;
-  padding: 10px;
+  padding: 2px;
+  font-size: 14px;
 }
 
 h3 {
