--- a/src/components/SimpleCorrelationDisplay/SimpleCorrelationDisplay.module.css
+++ b/src/components/SimpleCorrelationDisplay/SimpleCorrelationDisplay.module.css
@@ -1,8 +1,9 @@
 .SimpleCorrelationDisplay {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
   padding: 5px;
+  min-height: 200px;
 }
 
 .Header {
