--- a/src/pages/AirQualityXTrafficIncidents.module.css
+++ b/src/pages/AirQualityXTrafficIncidents.module.css
@@ -14,11 +14,9 @@
 
 .Rhs {
   grid-column: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   overflow-y: auto;
   padding: 10px;
+  padding-top: 30px;
 }
 
 .Overlay {
