--- a/src/pages/Map.css
+++ b/src/pages/Map.css
@@ -34,6 +34,16 @@
   cursor: pointer;
 }
 
+.SliderPanel {
+  position: absolute;
+  bottom: 0;
+  height: 40px;
+  width: 500px;
+  z-index: 10000;
+  background: #00000082;
+  padding: 20px;
+}
+
 .SuburbRankingPanel {
   position: absolute;
   right: 0;
