--- a/src/App.css
+++ b/src/App.css
@@ -44,12 +44,13 @@
   top: 0;
   right: 0px;
   z-index: 100000;
-  width: 220px;
+  width: 230px;
   display: flex;
   justify-content: space-between;
   background: #ffffff94;
   padding: 2px;
   font-size: 14px;
+  padding: 0 20px;
 }
 
 h3 {
