--- a/src/pages/Map.css
+++ b/src/pages/Map.css
@@ -19,7 +19,7 @@
   left: 0;
   top: 200px;
   z-index: 10000;
-  background: #00000082;
+  background: #000000ad;
   user-select: none;
   padding: 20px;
 }
@@ -40,7 +40,7 @@
   height: 40px;
   width: 500px;
   z-index: 10000;
-  background: #00000082;
+  background: #000000ad;
   padding: 20px;
 }
 
@@ -50,12 +50,18 @@
   top: 0;
   bottom: 0;
   z-index: 10000;
-  background: #00000082;
+  background: #000000ad;
   padding: 20px;
+  padding-top: 30px;
+  width: 230px;
 }
 
 .Rank {
   white-space: nowrap;
   text-align: left;
   cursor: pointer;
+}
+
+.PadRight {
+  padding-right: 20px;
 }
